// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`line Decoration line includes external link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "content": "example",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "[https://example.com example]",
            "type": "link",
          },
        ],
        "raw": "[* [https://example.com example]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Decoration line includes internal link 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "content": "",
            "href": "Link",
            "pathType": "relative",
            "raw": "[Link]",
            "type": "link",
          },
        ],
        "raw": "[* [Link]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Decoration line includes internal link 2`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "content": "example",
            "href": "https://example.com",
            "pathType": "absolute",
            "raw": "[https://example.com example]",
            "type": "link",
          },
        ],
        "raw": "[* [https://example.com example]]",
        "rawDecos": "*",
        "type": "decoration",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Line that have multi node 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
      {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
    ],
    "type": "line",
  },
]
`;

exports[`line Multi \`]\` 1`] = `
[
  {
    "indent": 0,
    "nodes": [
      {
        "decos": [
          "*-1",
        ],
        "nodes": [
          {
            "raw": "[Link",
            "text": "[Link",
            "type": "plain",
          },
        ],
        "raw": "[* [Link]",
        "rawDecos": "*",
        "type": "decoration",
      },
      {
        "raw": "\`code\`",
        "text": "code",
        "type": "code",
      },
      {
        "content": "",
        "href": "Link",
        "pathType": "relative",
        "raw": "[Link]",
        "type": "link",
      },
      {
        "raw": "]",
        "text": "]",
        "type": "plain",
      },
    ],
    "type": "line",
  },
]
`;
